# Projects

AI_Ethics_Game/: README.md  index.html  script.js
Projects from Technion/02340118 - Computer Organization And Programming (ATAM)/: README.md
Projects from Technion/02340123 - Operating Systems/: README.md
Projects from Technion/02340123 - Operating Systems/hw1/files/: Commands.cpp  (+4 more)
Projects from Technion/02340124 - Introduction to Systems Programming/: README.md
Projects from Technion/02340124 - Introduction to Systems Programming/hw1/: makefile
Projects from Technion/02340124 - Introduction to Systems Programming/hw4/files/: CMakeLists.txt  Exception.h  Mtmchkin.cpp  Mtmchkin.h  utilities.h
Projects from Technion/02340124 - Introduction to Systems Programming/hw4/files/Cards/: Barfight.cpp  Barfight.h  BattleCard.cpp  BattleCard.h  Card.cpp  Card.h  Dragon.cpp  Dragon.h  Fairy.cpp  Fairy.h  Gang.cpp  Gang.h  Goblin.cpp  Goblin.h  Merchant.cpp  Merchant.h  Pitfall.cpp  Pitfall.h  Treasure.cpp  Treasure.h  Vampire.cpp  Vampire.h
Projects from Technion/02340124 - Introduction to Systems Programming/hw4/files/Players/: Fighter.cpp  Fighter.h  Player.cpp  Player.h  Rogue.cpp  Rogue.h  Wizard.cpp  Wizard.h
Projects from Technion/02340124 - Introduction to Systems Programming/hw4/files/tool/: main.cpp
Projects from Technion/02340218 - Data Structures 1/: Content of projects.txt  README.md
Projects from Technion/02360501 - Introduction to Artificial Intelligence/: README.md
Projects from Technion/02360756 - Introduction to Machine Learning/: README.md
(+66 files in other folders)
